<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/add_dialog_bg"
    android:padding="10dp">
    <TextView
        android:textColor="#000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label"
        android:id="@+id/tvLabel"/>
    <EditText
        android:inputType="text"
        android:backgroundTint="#9ED8D8D8"
        android:hint="@string/value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/etValue"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnUpdate"
        android:text="@string/update"/>

</LinearLayout>