<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@drawable/add_dialog_bg">
    <TextView
        android:layout_marginBottom="5dp"
        android:textSize="20sp"
        android:fontFamily="@font/actor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_category"
        android:textColor="@color/black"
        android:id="@+id/tvrusure"/>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">
        <Button
            android:fontFamily="@font/actor"
            android:textAllCaps="false"
            android:textSize="14sp"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:text="@string/no"
            android:id="@+id/btnNo"
            android:background="@color/white"
            android:textColor="#000"
            android:layout_gravity="end"/>
        <Button
            android:fontFamily="@font/actor"
            android:textAllCaps="false"
            android:textSize="14sp"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:text="@string/yes"
            android:id="@+id/btnYes"
            android:background="@drawable/btn_add_bg"
            android:textColor="#fff"
            android:layout_gravity="end"/>

    </LinearLayout>


</LinearLayout>