<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:background="#fff"
    tools:context=".VerifyOTPActivity">

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <include
            layout="@layout/tool_bar"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"/>
        <TextView
            android:fontFamily="@font/actor"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Verify your phone number"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="#000"/>
        <TextView
            android:fontFamily="@font/open_sans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDisplay"
            android:layout_marginTop="20dp"
            android:textStyle="normal"
            android:gravity="center"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:textColor="#333"
            android:textSize="14sp"
            android:text="@string/tt"/>
        <TextView
            android:id="@+id/tvChangeNumber"
            android:fontFamily="@font/actor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:layout_marginTop="0dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/change_number"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="15sp"/>
           
            <EditText
                android:letterSpacing="0.50"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:maxLength="6"
                android:id="@+id/etotp"
                android:textSize="15sp"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:background="@drawable/et_bg_phone_number"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:hint="@string/_123456"
                android:textColor="#ff000000"
                android:textStyle="bold"
                android:importantForAutofill="no"/>

        <FrameLayout
            android:id="@+id/ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp">
            <Button
                android:fontFamily="@font/actor"
                android:layout_gravity="center"
                android:id="@+id/btnVerifyOtp"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/verify"
                android:textStyle="bold"
                android:background="@drawable/btn_bg"
                android:textColor="@drawable/btn_bg"/>

            <ProgressBar
                android:layout_marginTop="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTint="@color/green1"
                android:id="@+id/progressBar"
                android:visibility="gone"/>

        </FrameLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Resend Otp"
        android:id="@+id/tvResendOtp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"/>
    </LinearLayout>

</ScrollView>